# CGGS-CW3-Debugging

./: .gitignore  README.md
code/: CMakeLists.txt
code/Section1/: CMakeLists.txt  main.cpp
code/Section2/: CMakeLists.txt  main.cpp
code/include/: compute_areas_normals.h  compute_laplacian.h  create_edge_list.h  readOBJ.h  readOFF.h  serialization.h  set_diff.h  slice_columns_sparse.h  sort_rows.h  unique.h
data/: spherers.off
report/: main.tex
